1997-12-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* MessageProbeWidget.m (isSpace): Add macro to cast char to int
	before passing to isspace.
	(empty): Use new macro isSpace.

	* ProbeDisplay.m ([ProbeDisplay -setWindowGeometryRecordName:]):
	Include tkobjc/control.h.

	* VarProbeWidget.m ([VarProbeWidget -createEnd]): Update to new or
	renamed tkobjc_setAnchorEast, tkobjc_setWidth,
	tkobjc_bindReturnToSetValue,
	tkobjc_bindKeyReleaseReturnToResetColorAndUpdate,
	tkobjc_bindFocusInToSetSelection,
	tkobjc_bindFocusOutToClearSelection, tkobjc_disabledState,
	tkobjc_bindButton3ToSpawn, tkobjc_bindButton3ToBeUnhelpful.
	([VarProbeWidget -Spawn]): Update to renamed tkobjc_ringBell and
	tkobjc_update.
	([VarProbeWidget -update]): Update to renamed
	tkobjc_normalState, tkobjc_disabledState, and tkobjc_update.
	([VarProbeWidget -idReceive]): Update to renamed tkobjc_focus.
	([VarProbeWidget -package]): Update to renamed tkobjc_ringBell
	and tkobjc_update.

	* SimpleProbeDisplay.m ([SimpleProbeDisplay -createEnd]): Update
	to renamed tkobjc_setRelief, tkobjc_getId, tkobjc_setAnchorWest,
	tkobjc_setColorBlue, tkobjc_bindButton3ForCompleteProbeDisplay,
	tkobjc_bindWindowEntry, tkobjcWindowExit,
	tkobjc_configureHideButton, tkobjc_packFill, and
	tkobjc_packFillLeft.
	([SimpleProbeDisplay -package]): Update to renamed tkobjc_packageName.
	([SimpleProbeDisplay -getId]): Update to renamed tkobjc_getId.

	* ProbeDisplay.m ([ProbeDisplay -createEnd]): Update to renamed
	tkobjc_updateIdleTasksAndHold and tkobjc_releaseAndUpdate.


	* MessageProbeWidget.m ([MessageProbeWidget -createEnd]): Update
	to new or renamed tkobjc_disabledState, tkobjc_setWidth,
	tkobjc_bindButton3ToSpawn, tkobjc_bindButton3ToBeUnhelpful,
	tkobjc_packFillLeft, tkobjc_setText, and
	tkobjc_bindButton3ToArgSpawn.  Reformatting throughout.
	([MessageProbeWidget -dynamic]): Update to renamed
	tkobjc_ringBell, tkobjc_normalState, tkobjc_disabledState.