@@ -1,5 +1,9 @@
 1997-12-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
+	* MessageProbeWidget.m ([MessageProbeWidget -idReceive:which]):
+	Use renamed tkobjc_gimme_drag_and_drop_object.
+	* VarProbeWidget.m ([VarProbeWidget -idReceive]): Likewise.
+
 	* MessageProbeWidget.m (isSpace): Add macro to cast char to int
 	before passing to isspace.
 	(empty): Use new macro isSpace.
